# ChangeLog for net-fs/cifs-utils
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-fs/cifs-utils/ChangeLog,v 1.16 2011/10/03 15:02:17 vostorga Exp $

  03 Oct 2011; Víctor Ostorga <vostorga@gentoo.org> -cifs-utils-5.0.ebuild:
  Cleaning up vulnerable versions, CVE-2011-2724, bug 382263

*cifs-utils-5.1 (26 Sep 2011)

  26 Sep 2011; Víctor Ostorga <vostorga@gentoo.org> +cifs-utils-5.1.ebuild:
  Moving to EAPI 4, adding upcall use flag, which enable cifsidmap, forcing
  user to choice either caps or caps-ng support

  09 Aug 2011; Kacper Kowalik <xarthisius@gentoo.org> cifs-utils-5.0.ebuild:
  Marked ~ppc64 wrt #358401

  07 Aug 2011; Raúl Porcel <armin76@gentoo.org> cifs-utils-5.0.ebuild:
  Add ~ia64/~s390/~sh/~sparc wrt #358401

  15 Jul 2011; Matt Turner <mattst88@gentoo.org> cifs-utils-5.0.ebuild:
  Added ~mips, bug 358401

  30 Jun 2011; Víctor Ostorga <vostorga@gentoo.org> -cifs-utils-4.8.1.ebuild,
  cifs-utils-5.0.ebuild:
  Fixing DEPEND on !<net-fs/samba-3.6_rc2 bug #364225

  02 Jun 2011; Andreas K. Huettel <dilfridge@gentoo.org> cifs-utils-5.0.ebuild:
  Keyword ~arm, bug 358401

  02 Jun 2011; Víctor Ostorga <vostorga@gentoo.org> cifs-utils-5.0.ebuild:
  Using use_with in the caps-ng use flag case, thanks to leio for the heads up

*cifs-utils-5.0 (02 Jun 2011)

  02 Jun 2011; Víctor Ostorga <vostorga@gentoo.org> +cifs-utils-5.0.ebuild:
  Version bump to 5.0

  09 May 2011; Víctor Ostorga <vostorga@gentoo.org>
  cifs-utils-4.8.1.ebuild:
  Shining up checking of CIFS kernel parameter, thanks to Jeremy Olexa
  <darkside@gentoo.org> bug #364679

  27 Apr 2011; Víctor Ostorga <vostorga@gentoo.org>
  cifs-utils-4.8.1.ebuild:
  Replacing eerror to ewarn, and dropping die bug #364679

  31 Mar 2011; Jeroen Roovers <jer@gentoo.org> cifs-utils-4.8.1.ebuild:
  Marked ~hppa (bug #358401).

  27 Mar 2011; Tobias Klausmann <klausman@gentoo.org> cifs-utils-4.8.1.ebuild:
  Keyworded on alpha, bug #358401
