@@ -1,6 +1,9 @@
 # ChangeLog for net-fs/cifs-utils
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-fs/cifs-utils/ChangeLog,v 1.16 2011/10/03 15:02:17 vostorga Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-fs/cifs-utils/ChangeLog,v 1.17 2011/10/04 16:07:57 vostorga Exp $
+
+  04 Oct 2011; Víctor Ostorga <vostorga@gentoo.org> cifs-utils-5.1.ebuild:
+  Dropping setuid flag, CVE-2011-3585  bug 385315
 
   03 Oct 2011; Víctor Ostorga <vostorga@gentoo.org> -cifs-utils-5.0.ebuild:
   Cleaning up vulnerable versions, CVE-2011-2724, bug 382263
